--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@sendgrid/mail": "^8.1.5",
     "@supabase/supabase-js": "^2.56.0",
     "date-fns": "^4.1.0",
@@ -18,7 +19,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "twilio": "^5.8.0",
-    "zod": "^4.1.0"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
